<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Question -->
    <TextView
        android:id="@+id/QuizNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_no" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question" />

    <!-- Answer -->
    <Button
        android:id="@+id/Button01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/Button02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/Button03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer3"
        android:onClick="sendMessage" />
    <Button
        android:id="@+id/Button04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer4"
        android:onClick="sendMessage" />
    
</LinearLayout>
